# financial-data-analytics

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
ai_workflows/documentation_update/: SKILL.md
ai_workflows/intake_feature_build/: SKILL.md
ai_workflows/metrics_feature_build/: SKILL.md
ai_workflows/repo_inspection/: SKILL.md
ai_workflows/report_feature_build/: SKILL.md
ai_workflows/scope_discipline/: SKILL.md
ai_workflows/testing_and_validation/: SKILL.md
ai_workflows/visuals_feature_build/: SKILL.md
analytics_pipeline/: .gitignore  README.md  pyproject.toml
analytics_pipeline/analytics_pipeline/: cli.py  manifest.py  package.py  runner.py  stages.py  summary.py
analytics_pipeline/tests/analytics_pipeline/: test_cli.py  test_end_to_end_smoke.py  test_integration_readiness.py  test_manifest.py  test_package.py  test_powerbi_export_contract.py  test_runner.py  test_stages.py  test_summary.py
analytics_store/: README.md  pyproject.toml
analytics_store/analytics_store/: cli.py  loader.py  writer.py
analytics_store/outputs/: store.duckdb
analytics_store/tests/analytics_store/: test_cli.py  test_loader.py  test_writer.py
archive/: README.md
archive/excel/excel-data-cleaning-analysis/: README.md
archive/excel/excel-data-cleaning-analysis/data/processed/: Sales_Cleaned.xlsx
archive/sql/sales-sql-analysis/: .gitignore  README.md
archive/sql/sales-sql-analysis/sql/: analysis.sql  schema.sql
demo/: README.md
docs/: data_center_transaction_readiness_toolkit_one_page_summary.md  powerbi_export_contract.md
examples/readiness_demo/: .gitignore  build_powerbi_export.py  client_intake_template.xlsx  sample_client_intake_template.xlsx
examples/readiness_demo/tests/: test_build_powerbi_export.py
excel/excel-data-cleaning-analysis/: .gitignore
excel/excel-data-cleaning-analysis/data/raw/: Sales_Raw.xlsx
intake_engine/: .gitignore  CLAUDE.md  README.md  pipeline.yaml  pyproject.toml
intake_engine/intake_engine/cleaner/: __init__.py  cleaner.py  column_map.py
intake_engine/intake_engine/cli/: main.py
intake_engine/intake_engine/db/: __init__.py  writer.py
intake_engine/intake_engine/exporter/: __init__.py  exporter.py
intake_engine/intake_engine/loader/: __init__.py  loader.py
intake_engine/intake_engine/models/: config.py  profile.py  run_summary.py  validation.py
intake_engine/intake_engine/profiler/: __init__.py  profiler.py
intake_engine/intake_engine/reporter/: __init__.py  reporter.py
intake_engine/intake_engine/utils/: errors.py  logging.py
intake_engine/intake_engine/validator/: __init__.py  validator.py
intake_engine/tests/: conftest.py  date_csv_test.csv  test1.csv  test_batch.py  test_cleaner.py  test_column_config.py  test_column_selection.py  test_date_normalization.py  test_db.py  test_delimiter_detection.py  test_excel_sheets.py  test_loader.py  test_pipeline.py  test_profiler.py  test_reporter.py  test_validator.py  timestamp_test.csv
intake_engine/tests/excel_tests/: date_excel_test.xlsx  finance_pack.xlsx  market_report.xlsx  messy_ops.xlsx
intake_engine/tests/fixtures/: date_mixed_test.csv  dates_sample.csv  duplicate_test.csv  finance_dates_test.csv  format_test.csv  full_sample.csv  messy_data_center_sample_for_intake.csv  nulls.csv  numeric_sample.csv  power_sample.csv  pricing_test.csv  sample.csv  thousands_sample.csv
intake_engine/tests/tests/: provider_test.csv
metrics_engine/: .gitignore  CLAUDE.md  README.md  conftest.py  pyproject.toml  requirements.txt
metrics_engine/config/: metrics.yaml  readiness_metrics.yaml  readiness_schema.yaml  schema.yaml
metrics_engine/data/: messy_data_center_sample_for_intake_clean.csv  sample_data_centers.csv  sample_readiness.csv
metrics_engine/metrics_engine/: calculator.py  cli.py  exporter.py  loader.py  metric_registry.py  output_builder.py  schema.py  time_engine.py  validator.py
metrics_engine/tests/: conftest.py  test_calculator.py  test_cli.py  test_exporter.py  test_loader.py  test_metric_registry.py  test_output_builder.py  test_readiness_e2e.py  test_schema.py  test_time_engine.py  test_validator.py
readiness_workbook/: pyproject.toml
readiness_workbook/readiness_workbook/: builder.py  cli.py  demo_context.py
readiness_workbook/tests/: test_builder.py
report_engine/: .gitignore  README.md  pyproject.toml
report_engine/report_engine/: cli.py  formatting.py  html.py  insights.py  loader.py  pdf.py  renderer.py  templates.py
report_engine/tests/: conftest.py
report_engine/tests/report_engine/: test_cli.py  test_formatting.py  test_insights.py  test_loader.py  test_renderer.py  test_templates.py
sql/sales-sql-analysis/: README.md
sql/sales-sql-analysis/sql/: inserts.sql
visuals_engine/: README.md  pyproject.toml
visuals_engine/tests/: conftest.py  test_cli.py  test_exporter.py  test_loader.py  test_pdf.py  test_renderer.py
visuals_engine/visuals_engine/: cli.py  exporter.py  loader.py  pdf.py  renderer.py
visuals_engine/visuals_engine/specs/: readiness_dashboard.yaml
visuals_engine/visuals_engine/templates/: readiness_dashboard.html  readiness_dashboard_pdf.html
