[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "analytics_pipeline"
version = "0.2.0"
description = "Stage-based orchestrator for the Intake → Metrics → Report pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
analytics-pipeline = "analytics_pipeline.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["analytics_pipeline"]
