[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "analytics_store"
version = "0.1.0"
description = "DuckDB-backed analytics store for Metrics Engine and Report Engine outputs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "duckdb>=0.10.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
analytics-store = "analytics_store.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["analytics_store"]
