[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intake_engine"
version = "1.0.0"
description = "Lean CLI tool for ingesting and cleaning CSV/XLSX files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars>=0.20.0",
    "openpyxl>=3.1.0",
    "fastexcel>=0.7.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "duckdb>=0.10.0",
]

[project.scripts]
intake = "intake_engine.cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["intake_engine"]
