[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metrics_engine"
version = "0.1.0"
description = "CLI tool for computing KPIs and metrics from clean intake data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
metrics-engine = "metrics_engine.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["metrics_engine"]
