[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "readiness_workbook"
version = "0.1.0"
description = "Readiness workbook builder — resolves requirement statuses and writes PowerBI_Export + client_context.csv"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.0",
]

[project.scripts]
readiness-workbook = "readiness_workbook.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["readiness_workbook"]
