[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "report_engine"
version = "1.0.0"
description = "CLI tool for generating client-facing reports from Metrics Engine output"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
report-engine = "report_engine.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["report_engine"]
