[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visuals_engine"
version = "0.1.0"
description = "Renders trusted metrics from analytics.duckdb into static business-ready dashboards"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=0.10.0",
    "jinja2>=3.1.0",
    "pandas>=2.0.0",
]

[project.scripts]
visuals-engine = "visuals_engine.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
pdf = [
    "xhtml2pdf>=0.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["visuals_engine"]
